samples/_failures_safe/1761689751_655b2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad116c13.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_ad116c13.c:172:5: error: expected declaration or statement at end of input
  172 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_ad116c13.c:172:5: error: expected declaration or statement at end of input
